--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -108,9 +108,9 @@ jobs:
         if [[ "${{ matrix.ros_distro }}" == "jazzy" || \
               "${{ matrix.ros_distro }}" == "kilted" || \
               "${{ matrix.ros_distro }}" == "rolling" ]]; then
-          pip3 install --break-system-packages -e .
+          pip3 install --break-system-packages --ignore-installed pygments -e .
         else
-          pip3 install -e .
+          pip3 install --ignore-installed pygments -e .
         fi
       shell: bash
 
