--- a/.github/workflows/debian-packages.yml
+++ b/.github/workflows/debian-packages.yml
@@ -151,10 +151,10 @@ jobs:
         ls -la debian_packages/${{ matrix.ros_distro }}/
 
         # Install the debian packages on top of ros-core
-        apt-get install -y ./debian_packages/${{ matrix.ros_distro }}/ros-${{ matrix.ros_distro }}-greenwave-monitor-interfaces_*.deb ./debian_packages/${{ matrix.ros_distro }}/ros-${{ matrix.ros_distro }}-greenwave-monitor_*.deb ./debian_packages/${{ matrix.ros_distro }}/ros-${{ matrix.ros_distro }}-r2s-gw_*.deb
+        apt-get install -y ./debian_packages/${{ matrix.ros_distro }}/ros-${{ matrix.ros_distro }}-greenwave-monitor-interfaces_*.deb ./debian_packages/${{ matrix.ros_distro }}/ros-${{ matrix.ros_distro }}-greenwave-monitor_*.deb
 
         # Verify packages are installed
-        dpkg -s ros-${{ matrix.ros_distro }}-r2s-gw ros-${{ matrix.ros_distro }}-greenwave-monitor ros-${{ matrix.ros_distro }}-greenwave-monitor-interfaces
+        dpkg -s ros-${{ matrix.ros_distro }}-greenwave-monitor ros-${{ matrix.ros_distro }}-greenwave-monitor-interfaces
       shell: bash
       env:
         DEBIAN_FRONTEND: noninteractive
@@ -173,8 +173,9 @@ jobs:
 
         # Run ncurses frontend with simulated terminal and quit command
         # Exit code 0 means clean exit (not 11 for SIGSEGV or 134 for SIGABRT)
+        # Set TERM=linux to provide basic terminal capabilities for curses
         set +e
-        timeout 10s script -qfec 'ros2 run greenwave_monitor ncurses_dashboard' /dev/null <<< $'q'
+        TERM=linux timeout 10s script -qfec 'ros2 run greenwave_monitor ncurses_dashboard' /dev/null <<< $'q'
         EXIT_CODE=$?
         set -e
 
@@ -202,24 +203,69 @@ jobs:
         kill -9 "$(cat /tmp/gwm_ncurses.pid)" 2>/dev/null || true
       shell: bash
 
-    - name: Install Python dependencies for r2s_gw
+    - name: Clone r2s_gw repository for integration testing
       run: |
-        # Install Python dependencies (only needed for r2s_gw, not ncurses)
-        apt-get install -y python3-pip || true
-        if [[ "${{ matrix.ros_distro }}" == "jazzy" || \
-              "${{ matrix.ros_distro }}" == "kilted" || \
-              "${{ matrix.ros_distro }}" == "rolling" ]]; then
-          python3 -m pip install -I textual --break-system-packages
+        # Install git if not available
+        apt-get update -qq
+        apt-get install -y git
+
+        # Try to clone the matching branch, fallback to main if it doesn't exist
+        # Use head_ref for PRs (actual branch name), ref_name for pushes
+        BRANCH_NAME="${{ github.head_ref || github.ref_name }}"
+        if git ls-remote --exit-code --heads https://github.com/NVIDIA-ISAAC-ROS/r2s_gw.git "$BRANCH_NAME" > /dev/null 2>&1; then
+          echo "Cloning r2s_gw branch: $BRANCH_NAME"
+          git clone --branch "$BRANCH_NAME" --depth 1 https://github.com/NVIDIA-ISAAC-ROS/r2s_gw.git
         else
-          python3 -m pip install textual
+          echo "Branch $BRANCH_NAME not found in r2s_gw, falling back to main"
+          git clone --branch main --depth 1 https://github.com/NVIDIA-ISAAC-ROS/r2s_gw.git
         fi
       shell: bash
 
-    - name: Test r2s_gw execution
+    - name: Install Python dependencies for r2s_gw
+      run: |
+        # Install pip if not available
+        apt-get install -y python3-pip python3-colcon-common-extensions || true
+
+        # Install Python dependencies
+        if [[ "${{ matrix.ros_distro }}" == "jazzy" || \
+              "${{ matrix.ros_distro }}" == "kilted" || \
+              "${{ matrix.ros_distro }}" == "rolling" ]]; then
+          pip3 install --break-system-packages --ignore-installed pygments textual
+        else
+          pip3 install --ignore-installed pygments textual
+        fi
+      shell: bash
+
+    - name: Build r2s_gw with colcon
       run: |
         source /opt/ros/${{ matrix.ros_distro }}/setup.bash
-        timeout 10s bash -lc "script -qfec 'ros2 run r2s_gw r2s_gw' /dev/null <<< \$'q'" || true
-        timeout 10s bash -lc "script -qfec 'ros2 run greenwave_monitor r2s_gw_dashboard' /dev/null <<< \$'q'" || true
+        # Build r2s_gw to register it as a ROS package
+        colcon build --packages-select r2s_gw --base-paths .
+      shell: bash
+
+    - name: Test r2s_gw_dashboard execution
+      run: |
+        source /opt/ros/${{ matrix.ros_distro }}/setup.bash
+        source install/local_setup.bash
+
+        echo "Testing r2s_gw_dashboard with debian-installed greenwave_monitor..."
+
+        # Test r2s_gw dashboard with proper terminal
+        # The dashboard script automatically starts the monitor node
+        set +e
+        TERM=linux timeout 10s script -qfec 'ros2 run r2s_gw r2s_gw_dashboard' /dev/null <<< $'q'
+        EXIT_CODE=$?
+        set -e
+
+        if [ $EXIT_CODE -eq 0 ]; then
+          echo "✓ r2s_gw_dashboard exited cleanly"
+        elif [ $EXIT_CODE -eq 124 ]; then
+          echo "✗ r2s_gw_dashboard timed out"
+          exit 1
+        else
+          echo "✗ r2s_gw_dashboard exited with unexpected code: $EXIT_CODE"
+          exit 1
+        fi
       shell: bash
 
     - name: Test greenwave_monitor execution
