Enable ROS testing CI on all PRs (#15)

--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -18,8 +18,9 @@
 name: ROS2 Tests
 
 on:
-  push:
-    branches: [ "**" ]  # Run on all branches
+  pull_request:
+    branches: [ main ]
+    types: [ opened, synchronize, reopened, ready_for_review ]
 
 env:
   ROS_LOCALHOST_ONLY: 1
