Add --hide-unmonitored flag to ncurses frontend (#20)
Add a --hide-unmonitored flag to the ncurses frontend. This makes it possible for the user to start greenwave monitor with only the topics that are being monitored visible.

Tests were also added to verify the argument parsing is functional with the frontend.

Signed-off-by: Blake McHale <bmchale@nvidia.com>

--- a/greenwave_monitor/CMakeLists.txt
+++ b/greenwave_monitor/CMakeLists.txt
@@ -110,6 +110,12 @@ if(BUILD_TESTING)
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
   )
 
+  # Add ncurses frontend tests
+  ament_add_pytest_test(test_ncurses_frontend_argparse test/test_ncurses_frontend_argparse.py
+    TIMEOUT 120
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+  )
+
   # Add gtests
   ament_add_gtest(test_message_diagnostics test/test_message_diagnostics.cpp
     TIMEOUT 60
