Add support for loading greenwave monitor parameters from a list
Signed-off-by: Blake McHale <bmchale@nvidia.com>

--- a/greenwave_monitor/CMakeLists.txt
+++ b/greenwave_monitor/CMakeLists.txt
@@ -60,7 +60,7 @@ install(TARGETS minimal_publisher_node
   DESTINATION lib/${PROJECT_NAME})
 
 install(
-  DIRECTORY launch examples
+  DIRECTORY launch examples config
   DESTINATION share/${PROJECT_NAME}
 )
 
