--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,6 +30,11 @@ repos:
   hooks:
     - id: flake8
       args: [--max-line-length=99, '--extend-ignore=B902,C816,D100,D101,D102,D103,D104,D105,D106,D107,D203,D212,D404,I202']
+- repo: https://github.com/netromdk/vermin
+  rev: v1.6.0
+  hooks:
+    - id: vermin
+      args: [-t=3.10-, --violations]
 - repo: https://github.com/scop/pre-commit-shfmt
   rev: v3.12.0-2
   hooks:
