--- a/greenwave_monitor/config/example.yaml
+++ b/greenwave_monitor/config/example.yaml
@@ -19,12 +19,12 @@
 
 greenwave_monitor:
   ros__parameters:
-    # topics parameter specifies topics to monitor that do not require expected frequencies or
-    # tolerances.
-    topics: ['/string_topic']
-    # greenwave_diagnostics parameter specifies the topics to monitor and their expected
-    # frequencies and tolerances.
-    greenwave_diagnostics:
+    # gw_monitored_topics parameter specifies topics to monitor that do not require expected
+    # frequencies or tolerances.
+    gw_monitored_topics: ['/string_topic']
+    # gw_frequency_monitored_topics parameter specifies the topics to monitor and their
+    # expected frequencies and tolerances.
+    gw_frequency_monitored_topics:
       /imu_topic:
         expected_frequency: 100.0
         tolerance: 10.0
