--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
   rev: v2.3.1
   hooks:
     - id: autopep8
-      args: [-i]
+      args: [--max-line-length=99, -i]
 - repo: https://github.com/pycqa/flake8
   rev: 7.1.1
   hooks:
