Tests lint in CI
Signed-off-by: Blake McHale <bmchale@nvidia.com>

--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -57,7 +57,7 @@ jobs:
 
     - name: Run pre-commit hooks (linting)
       run: |
-        apt update && apt install -y pipx
+        apt update && apt install -y pipx git
         pipx install pre-commit
         pipx ensurepath
         source ~/.bashrc
