--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,11 @@ repos:
     - id: check-yaml
     - id: end-of-file-fixer
     - id: trailing-whitespace
+# - repo: https://github.com/KAUTH/pre-commit-git-checks
+#   rev: 6bceeb7fb9f24270acff72b46979e9298bd60823
+#   hooks:
+#     - id: git-signoff
+#       stages: [commit-msg]
 - repo: https://github.com/hhatto/autopep8
   rev: v2.3.1
   hooks:
@@ -38,7 +43,7 @@ repos:
   rev: 1.6.1
   hooks:
     - id: copyright-required
-      exclude: '(\.ini|\.json|\.service|__init__\.py|\.md|\.gitkeep|\.conf|LICENSE|\.toml|\.template|\.style\..*|\.gitattributes|\.gitignore|\.editorconfig|\.bash-completion|\.install|\.links|changelog|debian/source/format|.codespellrc|copyright|ament_code_style\.cfg|test_pep257\.py|test_flake8\.py|test_copyright\.py)$'
+      exclude: '(^\.git/|(\.ini|\.json|\.service|__init__\.py|\.md|\.gitkeep|\.conf|LICENSE|\.toml|\.template|\.style\..*|\.gitattributes|\.gitignore|\.editorconfig|\.bash-completion|\.install|\.links|changelog|debian/source/format|.codespellrc|copyright|ament_code_style\.cfg|test_pep257\.py|test_flake8\.py|test_copyright\.py)$)'
 - repo: local
   hooks:
     - id: uncrustify
@@ -46,6 +51,12 @@ repos:
       entry: uncrustify -c ament_code_style.cfg --replace --no-backup
       language: system
       types_or: [c, c++]
+    - id: signed-off-by
+      name: Check commit is signed off
+      entry: "bash -c 'grep -q \"^Signed-off-by: \" \"$1\"' --"
+      language: system
+      stages: [commit-msg]
+      pass_filenames: true
 - repo: https://github.com/codespell-project/codespell
   rev: v2.4.1
   hooks:
