--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -62,6 +62,7 @@ jobs:
         pipx install pre-commit
         pipx ensurepath
         source ~/.bashrc
+        pwd
         pre-commit run --all-files --show-diff-on-failure
       shell: bash
       working-directory: greenwave_monitor
