--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -132,8 +132,9 @@ jobs:
         source /opt/ros/${{ matrix.ros_distro }}/setup.bash
         source install/setup.bash
         set -e
-        timeout 10s script -qfec "bash -c 'source /opt/ros/${{ matrix.ros_distro }}/setup.bash && source install/setup.bash && ros2 run greenwave_monitor ncurses_dashboard'" /dev/null <<< $'q'
-        timeout 10s script -qfec "bash -c 'source /opt/ros/${{ matrix.ros_distro }}/setup.bash && source install/setup.bash && ros2 run r2s_gw r2s_gw_dashboard'" /dev/null <<< $'q'
+        export -p > /tmp/ros_env.sh
+        timeout 10s script -qfec "/bin/bash -c 'source /tmp/ros_env.sh && ros2 run greenwave_monitor ncurses_dashboard'" /dev/null <<< $'q'
+        timeout 10s script -qfec "/bin/bash -c 'source /tmp/ros_env.sh && ros2 run r2s_gw r2s_gw_dashboard'" /dev/null <<< $'q'
         timeout 5s ros2 launch greenwave_monitor hz.launch.py gw_monitored_topics:='["/topic1", "/topic2"]'
       shell: bash
 
