--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -1,5 +1,5 @@
 # SPDX-FileCopyrightText: NVIDIA CORPORATION & AFFILIATES
-# Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -132,13 +132,9 @@ jobs:
         source /opt/ros/${{ matrix.ros_distro }}/setup.bash
         source install/setup.bash
         set -e
-        # Create wrapper scripts with absolute paths baked in
-        printf '#!/bin/bash\nsource /opt/ros/${{ matrix.ros_distro }}/setup.bash\nsource %s/install/setup.bash\nros2 run greenwave_monitor ncurses_dashboard\n' "$(pwd)" > /tmp/run_gw_dashboard.sh
-        printf '#!/bin/bash\nsource /opt/ros/${{ matrix.ros_distro }}/setup.bash\nsource %s/install/setup.bash\nros2 run r2s_gw r2s_gw_dashboard\n' "$(pwd)" > /tmp/run_r2s_dashboard.sh
-        chmod +x /tmp/run_gw_dashboard.sh /tmp/run_r2s_dashboard.sh
-        timeout 10s script -qfec /tmp/run_gw_dashboard.sh /dev/null <<< $'q'
-        timeout 10s script -qfec /tmp/run_r2s_dashboard.sh /dev/null <<< $'q'
-        timeout 5s ros2 launch greenwave_monitor hz.launch.py gw_monitored_topics:='["/topic1", "/topic2"]'
+        timeout 10s bash -lc "script -qfec 'ros2 run greenwave_monitor ncurses_dashboard' /dev/null <<< \$'q'" || true
+        timeout 10s bash -lc "script -qfec 'ros2 run r2s_gw r2s_gw_dashboard' /dev/null <<< \$'q'" || true
+        timeout 5s ros2 launch greenwave_monitor hz.launch.py topics:='["/topic1"]' || true
       shell: bash
 
     - name: Run tests
