--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -121,9 +121,10 @@ jobs:
         source /opt/ros/${{ matrix.ros_distro }}/setup.bash
         source install/setup.bash
         set -e
+        export TERM=xterm
         timeout 10s bash -lc "script -qfec 'ros2 run greenwave_monitor ncurses_dashboard' /dev/null <<< \$'q'" || true
         timeout 10s bash -lc "script -qfec 'ros2 run r2s_gw r2s_gw_dashboard' /dev/null <<< \$'q'" || true
-        timeout 5s ros2 launch greenwave_monitor hz.launch.py topics:='["/topic1"]' || true
+        timeout 5s ros2 launch greenwave_monitor hz.launch.py gw_monitored_topics:='["/topic1","/topic2"]' || true
       shell: bash
 
     - name: Run tests
