--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -102,7 +102,7 @@ jobs:
         colcon build --packages-up-to greenwave_monitor
       shell: bash
 
-    - name: Install r2s_gw with pip
+    - name: Install r2s_gw
       run: |
         source /opt/ros/${{ matrix.ros_distro }}/setup.bash
         source install/setup.bash
@@ -110,10 +110,11 @@ jobs:
         if [[ "${{ matrix.ros_distro }}" == "jazzy" || \
               "${{ matrix.ros_distro }}" == "kilted" || \
               "${{ matrix.ros_distro }}" == "rolling" ]]; then
-          pip3 install --break-system-packages --ignore-installed pygments -e .
+          pip3 install --break-system-packages --ignore-installed pygments -e . -r requirements.txt
         else
-          pip3 install --ignore-installed pygments -e .
+          pip3 install --ignore-installed pygments -e . -r requirements.txt
         fi
+        colcon build --packages-select r2s_gw
       shell: bash
 
     - name: Smoke test README commands
@@ -122,9 +123,9 @@ jobs:
         source install/setup.bash
         set -e
         export TERM=xterm
-        timeout 10s bash -lc "script -qfec 'ros2 run greenwave_monitor ncurses_dashboard' /dev/null <<< \$'q'" || true
-        timeout 10s bash -lc "script -qfec 'ros2 run r2s_gw r2s_gw_dashboard' /dev/null <<< \$'q'" || true
-        timeout 5s ros2 launch greenwave_monitor hz.launch.py gw_monitored_topics:='["/topic1","/topic2"]' || true
+        timeout 10s bash -lc "script -qfec 'ros2 run greenwave_monitor ncurses_dashboard' /dev/null <<< \$'q'"
+        timeout 10s bash -lc "script -qfec 'ros2 run r2s_gw r2s_gw_dashboard' /dev/null <<< \$'q'"
+        timeout 10s bash -lc "script -qfec 'ros2 run r2s_gw r2s_gw_dashboard -- --demo' /dev/null <<< \$'q'"
       shell: bash
 
     - name: Run tests
