--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -126,6 +126,14 @@ jobs:
         timeout 10s bash -lc "script -qfec 'ros2 run greenwave_monitor ncurses_dashboard --demo' /dev/null <<< \$'q'"
         timeout 10s bash -lc "script -qfec 'ros2 run r2s_gw r2s_gw_dashboard' /dev/null <<< \$'q'"
         timeout 10s bash -lc "script -qfec 'ros2 run r2s_gw r2s_gw_dashboard -- --demo' /dev/null <<< \$'q'"
+        # Start topic publishers in background for hz.launch.py test
+        ros2 topic pub /topic1 std_msgs/msg/String "{data: 'test'}" --rate 10 &
+        PUB1_PID=$!
+        ros2 topic pub /topic2 std_msgs/msg/String "{data: 'test'}" --rate 10 &
+        PUB2_PID=$!
+        trap "kill $PUB1_PID $PUB2_PID 2>/dev/null || true" EXIT
+        sleep 1
+        timeout --signal=INT --preserve-status 5s ros2 launch greenwave_monitor hz.launch.py gw_monitored_topics:='["/topic1", "/topic2"]' || [ $? -eq 130 ]
       shell: bash
 
     - name: Run tests
