--- a/.github/workflows/ros-tests.yml
+++ b/.github/workflows/ros-tests.yml
@@ -133,7 +133,7 @@ jobs:
         PUB2_PID=$!
         trap "kill $PUB1_PID $PUB2_PID 2>/dev/null || true" EXIT
         sleep 1
-        timeout --signal=INT --preserve-status 5s ros2 launch greenwave_monitor hz.launch.py gw_monitored_topics:='["/topic1", "/topic2"]' || [ $? -eq 130 ]
+        timeout --signal=INT --preserve-status 5s ros2 launch greenwave_monitor hz.launch.py gw_monitored_topics:='["/topic1", "/topic2"]'
       shell: bash
 
     - name: Run tests
